--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -304,7 +304,7 @@ clarity_ser <- clarity_ser_tbl %>%
 
 clarity_ser <- clarity_ser %>%
   filter(!is.na(PROV_TYPE)) %>%
-  dplyr::select(PROV_ID, PROV_TYPE, PROV_NAME)
+  dplyr::select(PROV_ID, PROV_TYPE, PROV_NAME, ACTIVE_STATUS)
 
 # require(openxlsx)
 # write.xlsx(clarity_ser, "Clarity Ser.xlsx")
@@ -313,25 +313,25 @@ clarity_ser <- clarity_ser %>%
 
 ```{r}
 
-data <- access_raw_tbl %>%
-  # left_join(clarity_ser_tbl %>% 
-  #             dplyr::select(PROV_ID, PROV_TYPE, PROV_NAME)) %>%
-  filter(DERIVED_STATUS_DESC == "Arrived") %>%
-  mutate(appt_year = year(CONTACT_DATE),
-         appt_month = month(CONTACT_DATE)) %>%
-  filter(appt_year >= 2023) %>%
-  group_by(appt_year, appt_month, SITE, DEPT_SPECIALTY_NAME, DEPARTMENT_NAME, DEPARTMENT_ID,
-           PROV_ID, PROV_NAME_WID, VISIT_PROV_STAFF_RESOURCE_C,
-           VISIT_METHOD, PRC_NAME, VISIT_TYPE, APPT_LENGTH) %>%
-  summarise(total = n()) %>%
-  collect()
-
-urology_procedures <- access_raw_tbl %>%
-  filter(DERIVED_STATUS_DESC == "Arrived") %>%
-  mutate(appt_year = year(CONTACT_DATE),
-         appt_month = month(CONTACT_DATE)) %>%
-  filter(appt_year >= 2023) %>% 
-  filter(DEPARTMENT_NAME %like% "=")
+# data <- access_raw_tbl %>%
+#   # left_join(clarity_ser_tbl %>% 
+#   #             dplyr::select(PROV_ID, PROV_TYPE, PROV_NAME)) %>%
+#   filter(DERIVED_STATUS_DESC == "Arrived") %>%
+#   mutate(appt_year = year(CONTACT_DATE),
+#          appt_month = month(CONTACT_DATE)) %>%
+#   filter(appt_year >= 2023) %>%
+#   group_by(appt_year, appt_month, SITE, DEPT_SPECIALTY_NAME, DEPARTMENT_NAME, DEPARTMENT_ID,
+#            PROV_ID, PROV_NAME_WID, VISIT_PROV_STAFF_RESOURCE_C,
+#            VISIT_METHOD, PRC_NAME, VISIT_TYPE, APPT_LENGTH) %>%
+#   summarise(total = n()) %>%
+#   collect()
+# 
+# urology_procedures <- access_raw_tbl %>%
+#   filter(DERIVED_STATUS_DESC == "Arrived") %>%
+#   mutate(appt_year = year(CONTACT_DATE),
+#          appt_month = month(CONTACT_DATE)) %>%
+#   filter(appt_year >= 2023) %>% 
+#   filter(DEPARTMENT_NAME %like% "=")
 
 ```
 
@@ -559,9 +559,11 @@ late_block_raw <- block_raw_tbl %>%
 # Block combinations by time slot ----------------------------------------------
 ## Shows all blocks associated to each time slot -------------------------------
 blocks_combined <- late_block_raw %>%
+  left_join(clarity_ser_tbl %>% 
+              dplyr::select(PROV_ID, PROV_TYPE, ACTIVE_STATUS)) %>%
   ungroup() %>%
   arrange(DEPARTMENT_ID, SLOT_BEGIN_TIME, comb_block_name) %>%
-  group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, Slot.DateYear, LINE, comb_block_name, ORG_AVAIL_BLOCKS, ORG_REG_OPENINGS) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, ACTIVE_STATUS, SLOT_BEGIN_TIME, Slot.DateYear, LINE, comb_block_name, ORG_AVAIL_BLOCKS, ORG_REG_OPENINGS) %>%
   summarise(total_blocks = n())
   
 
@@ -571,9 +573,9 @@ block_openings <- blocks_combined %>%
                                 comb_block_name %in% new_blocks ~ "new",
                                 TRUE ~ "non-new")) %>%
   collect() %>%
-  group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, ACTIVE_STATUS, SLOT_BEGIN_TIME) %>%
   mutate(block_combination = paste0(unique(comb_block_name), collapse = ', ')) %>%
-  group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, Slot.DateYear, ORG_REG_OPENINGS, block_combination, block_type) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, ACTIVE_STATUS, SLOT_BEGIN_TIME, Slot.DateYear, ORG_REG_OPENINGS, block_combination, block_type) %>%
   summarise(openings = sum(ORG_AVAIL_BLOCKS),
             blocks = n()) %>%
   pivot_wider(names_from = block_type,
@@ -633,16 +635,16 @@ block_openings$Provider <- prov_mapping$PROV_NAME[match(block_openings$PROV_ID, 
 # Categorize slots by non-new vs. new vs. new time-relese 
 blocks_combined_type <- blocks_combined %>%
   left_join(clarity_ser_tbl %>% 
-              dplyr::select(PROV_ID, PROV_TYPE)) %>%
+              dplyr::select(PROV_ID, PROV_TYPE, ACTIVE_STATUS)) %>%
   mutate(new_block = case_when(comb_block_name %in% new_blocks ~ "NEW_BLOCK",
                                TRUE ~ "NON_NEW_BLOCK"),
          release_block = case_when(comb_block_name %in% release_blocks ~ "TIME_RELEASE",
                                    TRUE ~ "NON_TIME_RELEASE")) %>%
   collect() %>%
   arrange(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, comb_block_name) %>%
-  group_by(DEPARTMENT_ID, PROV_ID, PROV_TYPE, SLOT_BEGIN_TIME) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, PROV_TYPE, ACTIVE_STATUS, SLOT_BEGIN_TIME) %>%
   mutate(block_combination = paste0(unique(comb_block_name), collapse = ', ')) %>%
-  group_by(DEPARTMENT_ID, PROV_ID, PROV_TYPE, SLOT_BEGIN_TIME,  block_combination, new_block, release_block) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, PROV_TYPE, ACTIVE_STATUS, SLOT_BEGIN_TIME,  block_combination, new_block, release_block) %>%
   summarise(total = n()) %>%
   mutate(Slot.YearMonth = format(as.Date(SLOT_BEGIN_TIME),"%Y-%m"))
 
@@ -664,7 +666,7 @@ new_block_conversion <- blocks_combined_type %>%
   mutate(NON_NEW_BLOCK_NON_TIME_RELEASE = ifelse(NON_NEW_BLOCK_NON_TIME_RELEASE>0 & NEW_BLOCK_NON_TIME_RELEASE==0 & NEW_BLOCK_TIME_RELEASE==0,1,0),
          NEW_BLOCK_NON_TIME_RELEASE = ifelse(NEW_BLOCK_NON_TIME_RELEASE>0 & NEW_BLOCK_TIME_RELEASE==0,1,0),
          NEW_BLOCK_TIME_RELEASE = ifelse(NEW_BLOCK_TIME_RELEASE>0,1,0)) %>%
-  group_by(Site, Specialty, Department, DEPARTMENT_ID, Provider, PROV_TYPE, Slot.YearMonth) %>%
+  group_by(Site, Specialty, Department, DEPARTMENT_ID, Provider, PROV_TYPE, ACTIVE_STATUS, Slot.YearMonth) %>%
   summarise(NON_NEW_BLOCK_NON_TIME_RELEASE = sum(NON_NEW_BLOCK_NON_TIME_RELEASE),
             NEW_BLOCK_NON_TIME_RELEASE = sum(NEW_BLOCK_NON_TIME_RELEASE),
             NEW_BLOCK_TIME_RELEASE = sum(NEW_BLOCK_TIME_RELEASE),
@@ -680,7 +682,7 @@ new_block_conversion <- blocks_combined_type %>%
          incorrect_new_block_perc = round(incorrect_new_block/NEW_BLOCK_NON_TIME_RELEASE,2),
          incorrect_time_release_perc = round(incorrect_time_release_block/NEW_BLOCK_TIME_RELEASE,2)) %>%
   arrange(Site, Department, Provider)
-order <- c("Site","Department","Specialty","DEPARTMENT_ID","Provider","PROV_TYPE","Slot.YearMonth",
+order <- c("Site","Department","Specialty","DEPARTMENT_ID","Provider","PROV_TYPE", "ACTIVE_STATUS", "Slot.YearMonth",
            "TOTAL_BLOCKS","TOTAL_NEW_BLOCKS",
            "NON_NEW_BLOCK_NON_TIME_RELEASE","NEW_BLOCK_NON_TIME_RELEASE","NEW_BLOCK_TIME_RELEASE",
            "correct_new_block", "incorrect_new_block",
@@ -818,7 +820,7 @@ reactable(
   #                  fontWeight = "Bold")
   #           }
   #         },
-  groupBy = c("MSHS", "Site", "Department", "Specialty", "PROV_TYPE", "Provider"),
+  groupBy = c("MSHS", "Site", "Department", "Specialty", "PROV_TYPE", "Provider", "ACTIVE_STATUS"),
   columns = list(
     Site = colDef(
       name = "Site",
@@ -832,6 +834,9 @@ reactable(
       name = "Provider Type",
       minWidth = 130),
     Provider = colDef(
+      minWidth = 130),
+    ACTIVE_STATUS = colDef(
+      name = "Active Status",
       minWidth = 130),
     Slot.YearMonth = colDef(
       name = "Year-Month",
@@ -1008,6 +1013,9 @@ reactable(
       minWidth = 130),
     Provider = colDef(
       minWidth = 130),
+    ACTIVE_STATUS = colDef(
+      name = "Active Status",
+      minWidth = 130),
     Slot.YearMonth = colDef(
       name = "Year-Month",
       minWidth = 100),
@@ -1183,6 +1191,10 @@ reactable(
     
     Provider = colDef(
       minWidth = 150),
+    
+    ACTIVE_STATUS = colDef(
+      name = "Active Status",
+      minWidth = 130),
     
     Slot.YearMonth = colDef(
       name = "Year-Month",
