--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -460,8 +460,8 @@ late_block_raw <- block_raw_tbl %>%
   rename(block_name = NAME.x,
          org_block_name = NAME.y) %>%
   mutate(comb_block_name = trim(ifelse(is.na(org_block_name), block_name, org_block_name))) %>%
-  left_join(availability_raw_tbl %>% dplyr::select(PROV_ID, DEPARTMENT_ID, SLOT_BEGIN_TIME, ORG_REG_OPENINGS) %>%
-              group_by(PROV_ID, DEPARTMENT_ID, SLOT_BEGIN_TIME, ORG_REG_OPENINGS) %>%
+  left_join(availability_raw_tbl %>% dplyr::select(PROV_ID, DEPARTMENT_ID, SLOT_BEGIN_TIME, SLOT_LENGTH, ORG_REG_OPENINGS) %>%
+              group_by(PROV_ID, DEPARTMENT_ID, SLOT_BEGIN_TIME, SLOT_LENGTH, ORG_REG_OPENINGS) %>%
               summarise(total = n()) %>%
               dplyr::select(-total),
             by = c("PROV_ID", "DEPARTMENT_ID", "SLOT_BEGIN_TIME")) 
@@ -563,7 +563,7 @@ blocks_combined <- late_block_raw %>%
               dplyr::select(PROV_ID, PROV_TYPE, ACTIVE_STATUS)) %>%
   ungroup() %>%
   arrange(DEPARTMENT_ID, SLOT_BEGIN_TIME, comb_block_name) %>%
-  group_by(DEPARTMENT_ID, PROV_ID, ACTIVE_STATUS, SLOT_BEGIN_TIME, Slot.DateYear, LINE, comb_block_name, ORG_AVAIL_BLOCKS, ORG_REG_OPENINGS) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, ACTIVE_STATUS, SLOT_BEGIN_TIME, SLOT_LENGTH, Slot.DateYear, LINE, comb_block_name, ORG_AVAIL_BLOCKS, ORG_REG_OPENINGS) %>%
   summarise(total_blocks = n())
   
 
@@ -575,7 +575,7 @@ block_openings <- blocks_combined %>%
   collect() %>%
   group_by(DEPARTMENT_ID, PROV_ID, ACTIVE_STATUS, SLOT_BEGIN_TIME) %>%
   mutate(block_combination = paste0(unique(comb_block_name), collapse = ', ')) %>%
-  group_by(DEPARTMENT_ID, PROV_ID, ACTIVE_STATUS, SLOT_BEGIN_TIME, Slot.DateYear, ORG_REG_OPENINGS, block_combination, block_type) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, ACTIVE_STATUS, SLOT_BEGIN_TIME, SLOT_LENGTH, Slot.DateYear, ORG_REG_OPENINGS, block_combination, block_type) %>%
   summarise(openings = sum(ORG_AVAIL_BLOCKS),
             blocks = n()) %>%
   pivot_wider(names_from = block_type,
@@ -644,7 +644,7 @@ blocks_combined_type <- blocks_combined %>%
   arrange(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME, comb_block_name) %>%
   group_by(DEPARTMENT_ID, PROV_ID, PROV_TYPE, ACTIVE_STATUS, SLOT_BEGIN_TIME) %>%
   mutate(block_combination = paste0(unique(comb_block_name), collapse = ', ')) %>%
-  group_by(DEPARTMENT_ID, PROV_ID, PROV_TYPE, ACTIVE_STATUS, SLOT_BEGIN_TIME,  block_combination, new_block, release_block) %>%
+  group_by(DEPARTMENT_ID, PROV_ID, PROV_TYPE, ACTIVE_STATUS, SLOT_BEGIN_TIME, SLOT_LENGTH, block_combination, new_block, release_block) %>%
   summarise(total = n()) %>%
   mutate(Slot.YearMonth = format(as.Date(SLOT_BEGIN_TIME),"%Y-%m"))
 
@@ -666,7 +666,7 @@ new_block_conversion <- blocks_combined_type %>%
   mutate(NON_NEW_BLOCK_NON_TIME_RELEASE = ifelse(NON_NEW_BLOCK_NON_TIME_RELEASE>0 & NEW_BLOCK_NON_TIME_RELEASE==0 & NEW_BLOCK_TIME_RELEASE==0,1,0),
          NEW_BLOCK_NON_TIME_RELEASE = ifelse(NEW_BLOCK_NON_TIME_RELEASE>0 & NEW_BLOCK_TIME_RELEASE==0,1,0),
          NEW_BLOCK_TIME_RELEASE = ifelse(NEW_BLOCK_TIME_RELEASE>0,1,0)) %>%
-  group_by(Site, Specialty, Department, DEPARTMENT_ID, Provider, PROV_TYPE, ACTIVE_STATUS, Slot.YearMonth) %>%
+  group_by(Site, Specialty, Department, DEPARTMENT_ID, Provider, PROV_TYPE, ACTIVE_STATUS, Slot.YearMonth, SLOT_LENGTH) %>%
   summarise(NON_NEW_BLOCK_NON_TIME_RELEASE = sum(NON_NEW_BLOCK_NON_TIME_RELEASE),
             NEW_BLOCK_NON_TIME_RELEASE = sum(NEW_BLOCK_NON_TIME_RELEASE),
             NEW_BLOCK_TIME_RELEASE = sum(NEW_BLOCK_TIME_RELEASE),
@@ -682,7 +682,7 @@ new_block_conversion <- blocks_combined_type %>%
          incorrect_new_block_perc = round(incorrect_new_block/NEW_BLOCK_NON_TIME_RELEASE,2),
          incorrect_time_release_perc = round(incorrect_time_release_block/NEW_BLOCK_TIME_RELEASE,2)) %>%
   arrange(Site, Department, Provider)
-order <- c("Site","Department","Specialty","DEPARTMENT_ID","Provider","PROV_TYPE", "ACTIVE_STATUS", "Slot.YearMonth",
+order <- c("Site","Department","Specialty","DEPARTMENT_ID","Provider","PROV_TYPE", "ACTIVE_STATUS", "Slot.YearMonth", "SLOT_LENGTH",
            "TOTAL_BLOCKS","TOTAL_NEW_BLOCKS",
            "NON_NEW_BLOCK_NON_TIME_RELEASE","NEW_BLOCK_NON_TIME_RELEASE","NEW_BLOCK_TIME_RELEASE",
            "correct_new_block", "incorrect_new_block",
@@ -841,6 +841,10 @@ reactable(
     Slot.YearMonth = colDef(
       name = "Year-Month",
       minWidth = 100),
+    SLOT_LENGTH = colDef(
+      name = "Slot Length",
+      minWidth = 100),
+    
     TOTAL_BLOCKS = colDef(
       name = "Total Blocks",
       maxWidth = 100,
@@ -1018,6 +1022,9 @@ reactable(
       minWidth = 130),
     Slot.YearMonth = colDef(
       name = "Year-Month",
+      minWidth = 100),
+    SLOT_LENGTH = colDef(
+      name = "Slot Length",
       minWidth = 100),
     TOTAL_BLOCKS = colDef(
       name = "Total Blocks",
@@ -1198,6 +1205,9 @@ reactable(
     
     Slot.YearMonth = colDef(
       name = "Year-Month",
+      minWidth = 100),
+    SLOT_LENGTH = colDef(
+      name = "Slot Length",
       minWidth = 100),
     
     incorrect_slot = colDef(
